@@ -54,7 +54,7 @@
     <findbugs.onlyAnalyze>org.mybatis.generator.*</findbugs.onlyAnalyze>
     <clirr.comparisonVersion>1.3.2</clirr.comparisonVersion>
     <hsqldb.version>2.4.1</hsqldb.version>
-    <checkstyle.config>${project.basedir}/../checkstyle-override.xml</checkstyle.config>
+    <checkstyle.config>${project.basedir}/checkstyle-override.xml</checkstyle.config>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
     <junit.jupiter.version>5.3.0</junit.jupiter.version>
@@ -79,6 +79,24 @@
           <artifactId>maven-plugin-plugin</artifactId>
           <version>3.5.2</version>
         </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-source-plugin</artifactId>
+          <version>3.0.1</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-javadoc-plugin</artifactId>
+          <configuration>
+            <quiet>true</quiet>
+            <tags>
+              <tag>
+                <name>mbg.generated</name>
+                <placement>ctmf</placement>
+              </tag>
+            </tags>
+          </configuration>
+        </plugin>
       </plugins>
     </pluginManagement>
 
@@ -94,8 +112,8 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-site-plugin</artifactId>
         <configuration>
-          <!-- turn off be default, we'll turn it back on in the core project -->
-          <skip>true</skip>
+          <!-- turn off deployment by default, we'll turn it back on in the core project -->
+          <skipDeploy>true</skipDeploy>
         </configuration>
       </plugin>
       <!-- need to allow snapshots so the maven plugin can be tested -->
@@ -119,20 +137,6 @@
           </execution>
         </executions>
       </plugin>
-      <!-- 
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-javadoc-plugin</artifactId>
-        <configuration>
-          <tags>
-            <tag>
-              <name>mbg.generated</name>
-              <placement>X</placement>
-            </tag>
-          </tags>
-        </configuration>
-      </plugin>
-       -->
     </plugins>
 
     <resources>
@@ -155,19 +159,6 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-plugin-plugin</artifactId>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-javadoc-plugin</artifactId>
-        <version>3.0.1</version>
-        <configuration>
-          <tags>
-            <tag>
-              <name>mbg.generated</name>
-              <placement>X</placement>
-            </tag>
-          </tags>
-        </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -275,6 +266,11 @@
         <artifactId>mybatis-dynamic-sql</artifactId>
         <version>1.1.0</version>
       </dependency>
+      <dependency>
+        <groupId>org.reflections</groupId>
+        <artifactId>reflections</artifactId>
+        <version>0.9.11</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
@@ -288,6 +284,26 @@
   </modules>
 
   <profiles>
+    <profile>
+      <id>javadocVersion</id>
+      <activation>
+        <jdk>[9,)</jdk>
+      </activation>
+      <build>
+        <pluginManagement>
+          <plugins>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-javadoc-plugin</artifactId>
+              <configuration>
+                <additionalOptions>-html5 --add-modules java.xml.ws.annotation</additionalOptions>
+              </configuration>
+            </plugin>
+          </plugins>
+        </pluginManagement>
+      </build>
+    </profile>
+    
     <profile>
       <id>format</id>
       <activation>
@@ -336,13 +352,40 @@
                       <pluginExecutionFilter>
                         <groupId>org.mybatis.generator</groupId>
                         <artifactId>mybatis-generator-maven-plugin</artifactId>
-                        <versionRange>[1.3.3-SNAPSHOT,)</versionRange>
+                        <versionRange>[1.4.0-SNAPSHOT,)</versionRange>
                         <goals>
                           <goal>generate</goal>
                         </goals>
                       </pluginExecutionFilter>
                       <action>
                         <ignore />
+                      </action>
+                    </pluginExecution>
+                    <pluginExecution>
+                      <pluginExecutionFilter>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-plugin-plugin</artifactId>
+                        <versionRange>[3.5.2,)</versionRange>
+                        <goals>
+                          <goal>descriptor</goal>
+                          <goal>helpmojo</goal>
+                        </goals>
+                      </pluginExecutionFilter>
+                      <action>
+                        <ignore></ignore>
+                      </action>
+                    </pluginExecution>
+                    <pluginExecution>
+                      <pluginExecutionFilter>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <versionRange>[1.6.0,)</versionRange>
+                        <goals>
+                          <goal>java</goal>
+                        </goals>
+                      </pluginExecutionFilter>
+                      <action>
+                        <ignore></ignore>
                       </action>
                     </pluginExecution>
                   </pluginExecutions>
